crates/tele_folder/tests/snapshots/folder__fold_decl_node.snap
---
source: crates/tele_folder/tests/folder.rs
assertion_line: 22
expression: "transform(parser.parse().unwrap(), Renamer)"

---
StyleSheetNode {
    loc: Loc {
        start: Pos {
            offset: 0,
            line: 1,
            column: 1,
        },
        end: Pos {
            offset: 24,
            line: 1,
            column: 25,
        },
    },
    statements: [
        RuleSet(
            RuleSetNode {
                loc: Loc {
                    start: Pos {
                        offset: 2,
                        line: 1,
                        column: 3,
                    },
                    end: Pos {
                        offset: 22,
                        line: 1,
                        column: 23,
                    },
                },
                prelude: ".foo",
                declarations: [
                    DeclarationNode {
                        loc: Loc {
                            start: Pos {
                                offset: 9,
                                line: 1,
                                column: 10,
                            },
                            end: Pos {
                                offset: 19,
                                line: 1,
                                column: 20,
                            },
                        },
                        name: "-moz-color",
                        value: "red",
                        important: false,
                    },
                ],
            },
        ),
    ],
}
